# Portfolio

./: README.md
KIMSDEUTSCH_WEB/: .gitignore  README.md  package-lock.json  package.json  requirements.txt  tailwind.config.js
KIMSDEUTSCH_WEB/accounts/: admin.py  forms.py  models.py  urls.py  views.py
KIMSDEUTSCH_WEB/accounts/migrations/: 0001_initial.py
KIMSDEUTSCH_WEB/config/: settings.py  urls.py
KIMSDEUTSCH_WEB/static/css/: input.css
KIMSDEUTSCH_WEB/templates/: base.html
KIMSDEUTSCH_WEB/templates/accounts/: user_signup.html
KIMSDEUTSCH_WEB/templates/web/: course_create.html  course_detail.html  course_list.html  course_update.html  main.html
KIMSDEUTSCH_WEB/web/: admin.py  forms.py  models.py  urls.py  views.py
KIMSDEUTSCH_WEB/web/migrations/: 0001_initial.py  0002_examtype_level_theme_alter_coursematerial_created_at_and_more.py  0003_alter_theme_theme_code.py  0004_alter_examtype_exam_code_alter_theme_theme_code.py
PF1_pos/: .gitignore  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
PF1_pos/config/: settings.py  urls.py
PF1_pos/order/: admin.py  models.py  urls.py  views.py
PF1_pos/order/migrations/: 0001_initial.py
PF1_pos/static/js/: main.js
PF1_pos/templates/: index.html
PF1_pos/user/: admin.py  models.py
PF1_pos/user/migrations/: 0001_initial.py
portfolio-main/: .gitignore  index.html  package-lock.json  package.json
portfolio-main/src/: anschreiben.html  index_de.html  input.css  lebenslauf.html  main.js
