[project]
name = "pf1-pos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-tailwind>=4.2.0",
    "django-tailwindcss>=0.4.0",
    "django-widget-tweaks>=1.5.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.28.0",
    "ipython>=9.6.0",
    "pillow>=12.0.0",
    "pip>=25.2",
    "prompt-toolkit>=3.0.52",
]
